--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=7777
 server.tomcat.uri-encoding=UTF-8
 #数据源配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://116.62.222.97:3306/json?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=fan6135081
+spring.datasource.url=jdbc:mysql://0.0.0.0:3306/json?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=example
+spring.datasource.password=example
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 
 #mybatis配置
